force-app/main/default/objects/ProductServiceCampaign/fields/SVMXA360__AssetExpressionId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AssetExpressionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is for associating asset criteria with the PSC record.</description>
    <label>Asset Expression</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>SVMXA360__CONF_Expression__c.SVMXA360__ObjectAPIName__c</field>
            <operation>equals</operation>
            <value>Asset</value>
        </filterItems>
        <filterItems>
            <field>SVMXA360__CONF_Expression__c.SVMXA360__ExpressionType__c</field>
            <operation>equals</operation>
            <value>PSC-SEARCH-EXPRESSION</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SVMXA360__CONF_Expression__c</referenceTo>
    <relationshipLabel>Product Service Campaigns</relationshipLabel>
    <relationshipName>Product_Service_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>