force-app/main/default/objects/ProductServiceCampaign/fields/SVMXA360__DeliveryMethod__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DeliveryMethod__c</fullName>
    <description>Default Delivery Method indicates the delivery method that is automatically assigned as the default delivery method for all PSCI Result Lines related to the PSC Record, when generated via PSC Search.</description>
    <inlineHelpText>Default Delivery Method indicates the delivery method that is automatically assigned as the default delivery method for all PSCI Result Lines related to the PSC Record, when generated via PSC Search.</inlineHelpText>
    <label>Default Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SVMXA360__DeliveryMethod</valueSetName>
    </valueSet>
</CustomField>