force-app/main/default/objects/ProductServiceCampaign/fields/SVMXA360__NotifyPSCOwner__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__NotifyPSCOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this field will ensure that an email notification is sent to the owner of the PSC Record, both when the PSC Search is finished running and when Delivery Generation is complete.</description>
    <label>Send Email Notification</label>
    <type>Checkbox</type>
</CustomField>