force-app/main/default/objects/ProductServiceCampaign/fields/SVMXA360__PriceBookId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__PriceBookId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Pricebook to be referenced in the Product Service Campaign, for the purpose of generation Opportunity Delivery Outputs.</description>
    <inlineHelpText>The Pricebook to be referenced in the Product Service Campaign, for the purpose of generation Opportunity Delivery Outputs.</inlineHelpText>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Product Service Campaigns</relationshipLabel>
    <relationshipName>Product_Service_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>