force-app/main/default/objects/ProductServiceCampaign/fields/SVMXA360__SM_AdvancedExpression__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SM_AdvancedExpression__c</fullName>
    <description>The Advanced Expression for Asset and Technical Attribute search.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Advanced Expression for Asset and Technical Attribute search.</inlineHelpText>
    <label>Advanced Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>