force-app/main/default/objects/ProductServiceCampaign/fields/SVMXA360__SM_TASearchCriteriaAdvExpression__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SM_TASearchCriteriaAdvExpression__c</fullName>
    <description>The Advanced Expression for Technical Attribute search.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Advanced Expression for Technical Attribute search.</inlineHelpText>
    <label>Advanced Expression For TA Search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>