force-app/main/default/objects/ProductServiceCampaign/fields/SVMXA360__SM_TechnicalAttributeTemplateId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SM_TechnicalAttributeTemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the Technical Attribute Templates for Asset Technical Attributes</description>
    <inlineHelpText>A lookup to the Technical Attribute Templates for Asset Technical Attributes</inlineHelpText>
    <label>Technical Attribute Template</label>
    <referenceTo>SVMXA360__SM_TA_Template__c</referenceTo>
    <relationshipLabel>Product Service Campaigns</relationshipLabel>
    <relationshipName>Product_Service_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>