force-app/main/default/objects/ProductServiceCampaign/listViews/SVMXA360__AllProductServiceCampaigns.listView-meta.xml
<ListView>
    <fullName>SVMXA360__AllProductServiceCampaigns</fullName>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>Type</columns>
    <columns>Priority</columns>
    <columns>StartDate</columns>
    <columns>EndDate</columns>
    <filterScope>Everything</filterScope>
    <label>A360 - All Product Service Campaigns</label>
</ListView>